# ChangeLog for vmware overlay
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $ Id: $

  27 Jun 2006; Mike Auty <ikelos@gentoo.org>:
  Finally remove the old vmware-modules-101 ebuild, since it's not
  required by any packages in the tree anymore.  I hope to remove the
  vmware-pkg.eclass soon (I can't even remember which version of server
  made use of it, but if that ever gets unmerged, vmware-pkg still needs
  to be there).

  Once all that's done, we should probably move not-vmware-src-install
  over to vmware-src-install (and alias not-vmware-src-install to avoid
  breakages).  After that, there's a few fix-ups (symlinks, desktop icons)
  that need doing.  We're getting closer though, so it might be time
  to start adding ~x86 to some of the workstation/player builds, to get
  some people testing them... 5:)
  
  25 Jun 2006; Mike Auty <ikelos@gentoo.org>:
  Pushed out the latest builds for vmware-server/server-console (27828).
  
  23 Jun 2006; Mike Auty <ikelos@gentoo.org>:
  Altered the vmware.eclass to create a VMWARE_GROUP for console products too.

  19 Jun 2006; Mike Auty <ikelos@gentoo.org>:
  Comment out a line in the eclass that was breaking vmware-server when
  compiled with FEATURES="userpriv".  It seemed to reset all the permissions
  including the set-UID bit.  It was only included to avoid permission
  warnings with vmware-workstation.  If the warnings start again, we'll
  try and figure out another workaround.
  
  19 Jun 2006; Mike Auty <ikelos@gentoo.org>:
  Refactored several bits of the vmware.eclass based on the inconsistent naming
  scheme used by vmware-server-console to locate it's configuration info.

  I also finished off converting vmware-server over to the vmware.eclass
  and pushed vmware-server-console over to it too.  Hopefully we're nearly there
  now...  5:)
  
  16 Jun 2006; Mike Auty <ikelos@gentoo.org>:
  Ok, just double checked/lined up the vmware-module version numbers