@@ -59,10 +59,10 @@ EBUILD vmware-server-1.0.0.24927-r1.ebuild 3035 RMD160 241724c1ffaebcfed6a36674a
 MD5 4b919178f783aa2f6e9cf10a2425a260 vmware-server-1.0.0.24927-r1.ebuild 3035
 RMD160 241724c1ffaebcfed6a36674af76a28a4cf37874 vmware-server-1.0.0.24927-r1.ebuild 3035
 SHA256 cf0bbe124612b24594558a28cbbcf038345ed17158f6136e6fcc1adb33e73a25 vmware-server-1.0.0.24927-r1.ebuild 3035
-EBUILD vmware-server-1.0.0.27828.ebuild 2998 RMD160 b7d5d5ece63d73820169ad6b8c57ecb06f8cf770 SHA1 3d6d83975e71bf98b814cde68b79032fc32b2a44 SHA256 b48f88ce5fd7dbb9e386ab44720320b868c7b9a5a4eda0ffde226816d6f89936
-MD5 b1a9754d73be454637af99960a406042 vmware-server-1.0.0.27828.ebuild 2998
-RMD160 b7d5d5ece63d73820169ad6b8c57ecb06f8cf770 vmware-server-1.0.0.27828.ebuild 2998
-SHA256 b48f88ce5fd7dbb9e386ab44720320b868c7b9a5a4eda0ffde226816d6f89936 vmware-server-1.0.0.27828.ebuild 2998
+EBUILD vmware-server-1.0.0.27828.ebuild 3011 RMD160 8874251bdc11ccbb0ffd5704b02a81bf64f5a435 SHA1 9e2d3c585ad1801cc3aa0b7b0438e9c1a054ffe2 SHA256 54c2c792d35f87c7542e79c0fc097511c61681b20760ddb6101af810fcf79bf7
+MD5 96bde6928c9fd464b1a1a7aea440eb9f vmware-server-1.0.0.27828.ebuild 3011
+RMD160 8874251bdc11ccbb0ffd5704b02a81bf64f5a435 vmware-server-1.0.0.27828.ebuild 3011
+SHA256 54c2c792d35f87c7542e79c0fc097511c61681b20760ddb6101af810fcf79bf7 vmware-server-1.0.0.27828.ebuild 3011
 MD5 eab3637581f2e314685d9dff4b6a41d8 files/digest-vmware-server-1.0.0.24927-r1 900
 RMD160 61d923558bf2911ae89b3abe85525e0196ec2402 files/digest-vmware-server-1.0.0.24927-r1 900
 SHA256 979e02f00261bcf9f11026508ffa28cd9eef88de44c5ba4a60441abd10892eba files/digest-vmware-server-1.0.0.24927-r1 900
